# AlgoritmaPemrogramanKel10

./: README.md
StudyTrackerApp/: CMakeLists.txt  InputTugas.qml  Languange.qml  Login.qml  Main.qml  MainMenu.qml  SettingsPage.qml  StatistikPage.qml  StudyRoomPage.qml  TemanPage.qml  TimerBelajar.qml  authmanager.cpp  authmanager.h  main.cpp
